@@ -1,4 +1,25 @@
 /*[INCLUDE-IF Sidecar16]*/
+/*******************************************************************************
+ * Copyright (c) 1998, 2019 IBM Corp. and others
+ *
+ * This program and the accompanying materials are made available under
+ * the terms of the Eclipse Public License 2.0 which accompanies this
+ * distribution and is available at https://www.eclipse.org/legal/epl-2.0/
+ * or the Apache License, Version 2.0 which accompanies this distribution and
+ * is available at https://www.apache.org/licenses/LICENSE-2.0.
+ *
+ * This Source Code may also be made available under the following
+ * Secondary Licenses when the conditions for such availability set
+ * forth in the Eclipse Public License, v. 2.0 are satisfied: GNU
+ * General Public License, version 2 with the GNU Classpath
+ * Exception [1] and GNU General Public License, version 2 with the
+ * OpenJDK Assembly Exception [2].
+ *
+ * [1] https://www.gnu.org/software/classpath/license.html
+ * [2] http://openjdk.java.net/legal/assembly-exception.html
+ *
+ * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
+ *******************************************************************************/
 package java.lang;
 
 import java.io.*;
@@ -21,47 +42,25 @@ import java.util.Queue;
 import java.util.Vector;
 import java.util.Collections;
 import java.util.WeakHashMap;
-import java.util.stream.Stream;
 import java.lang.ref.ReferenceQueue;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.*;
 import java.security.cert.Certificate;
 
 /*[IF Sidecar19-SE]
+import java.lang.reflect.Modifier;
 import java.util.Spliterator;
 import java.util.Spliterators;
+import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 import jdk.internal.module.ServicesCatalog;
-import jdk.internal.misc.SharedSecrets;
 import java.util.concurrent.ConcurrentHashMap;
 import jdk.internal.reflect.CallerSensitive;
 import jdk.internal.loader.ClassLoaders;
 import jdk.internal.loader.BootLoader;
-/*[ELSE]*/
+/*[ELSE]
 import sun.reflect.CallerSensitive;
 /*[ENDIF]*/
-
-/*******************************************************************************
- * Copyright (c) 1998, 2017 IBM Corp. and others
- *
- * This program and the accompanying materials are made available under
- * the terms of the Eclipse Public License 2.0 which accompanies this
- * distribution and is available at https://www.eclipse.org/legal/epl-2.0/
- * or the Apache License, Version 2.0 which accompanies this distribution and
- * is available at https://www.apache.org/licenses/LICENSE-2.0.
- *
- * This Source Code may also be made available under the following
- * Secondary Licenses when the conditions for such availability set
- * forth in the Eclipse Public License, v. 2.0 are satisfied: GNU
- * General Public License, version 2 with the GNU Classpath
- * Exception [1] and GNU General Public License, version 2 with the
- * OpenJDK Assembly Exception [2].
- *
- * [1] https://www.gnu.org/software/classpath/license.html
- * [2] http://openjdk.java.net/legal/assembly-exception.html
- *
- * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
- *******************************************************************************/
  
 /**
  * ClassLoaders are used to dynamically load, link and install
@@ -97,8 +96,6 @@ public abstract class ClassLoader {
 	private long vmRef;
 	ClassLoader parent;
 	
-	private boolean initDone;
-	
 	/*[IF Panama]*/
 	private static String[]	usr_paths = new String[1];
 	/*[ENDIF]*/
@@ -113,10 +110,10 @@ public abstract class ClassLoader {
   	private Map<String, Boolean> packageAssertionStatus;
   	private Map<String, Boolean> classAssertionStatus;
   	/*[IF Sidecar19-SE]*/
-  	private final Hashtable<String, NamedPackage> packages = new Hashtable();
+    private final Hashtable<String, NamedPackage> packages = new Hashtable<>();
   	private volatile ConcurrentHashMap<?, ?> classLoaderValueMap;
 	/*[ELSE]
-  	private final Hashtable<String, Package> packages = new Hashtable();
+  	private final Hashtable<String, Package> packages = new Hashtable<>();
 	/*[ENDIF] Sidecar19-SE*/
 	/*[PR CMVC 94437] fix deadlocks */
 	/*[PR 122459] LIR646 - Remove use of generic object for synchronization */
@@ -147,7 +144,7 @@ public abstract class ClassLoader {
 /*[ELSE]	
 	private static boolean lazyClassLoaderInit = false;
 /*[ENDIF]*/	
-	private static boolean bootloaderInited = false;
+	private static boolean specialLoaderInited = false;
 	private static InternalAnonymousClassLoader internalAnonClassLoader;
 	private static native void initAnonClassLoader(InternalAnonymousClassLoader anonClassLoader);	
 	
@@ -206,39 +203,37 @@ public abstract class ClassLoader {
 			// ignore
 		}
 
+		/*[IF Java11]*/
+		// This static method call ensures jdk.internal.loader.ClassLoaders.BOOT_LOADER initialization first
+		jdk.internal.loader.ClassLoaders.platformClassLoader();
+		if (bootstrapClassLoader.servicesCatalog != null) {
+			throw new InternalError("bootstrapClassLoader.servicesCatalog is NOT null "); //$NON-NLS-1$
+		}
+		bootstrapClassLoader.servicesCatalog = BootLoader.getServicesCatalog();
+		if (bootstrapClassLoader.classLoaderValueMap != null) {
+			throw new InternalError("bootstrapClassLoader.classLoaderValueMap is NOT null "); //$NON-NLS-1$
+		}
+		bootstrapClassLoader.classLoaderValueMap = BootLoader.getClassLoaderValueMap();
+		applicationClassLoader = ClassLoaders.appClassLoader();
+		/*[ELSE] Java11 */
 		ClassLoader sysTemp = null;
 		// Proper initialization requires BootstrapLoader is the first loader instantiated
 		String systemLoaderString = System.internalGetProperties().getProperty("systemClassLoader"); //$NON-NLS-1$
-		if(null == systemLoaderString) {
-			/*[IF Sidecar19-SE]*/
-			// This static method call ensures jdk.internal.loader.ClassLoaders.BOOT_LOADER initialization first
-			jdk.internal.loader.ClassLoaders.platformClassLoader();
-			if (bootstrapClassLoader.servicesCatalog != null) {
-				throw new InternalError("bootstrapClassLoader.servicesCatalog is NOT null "); //$NON-NLS-1$
-			}
-			bootstrapClassLoader.servicesCatalog = BootLoader.getServicesCatalog();
-			if (bootstrapClassLoader.classLoaderValueMap != null) {
-				throw new InternalError("bootstrapClassLoader.classLoaderValueMap is NOT null "); //$NON-NLS-1$
-			}
-			bootstrapClassLoader.classLoaderValueMap = BootLoader.getClassLoaderValueMap();
-			applicationClassLoader = ClassLoaders.appClassLoader();
-			/*[ELSE]*/
+		if (null == systemLoaderString) {
 			sysTemp = com.ibm.oti.vm.BootstrapClassLoader.singleton();
-			/*[ENDIF]*/
 		} else {
 			try {
-				sysTemp = (ClassLoader)Class.forName(systemLoaderString,true,null).newInstance();
-			} catch(Throwable x) {
+				sysTemp = (ClassLoader)Class.forName(systemLoaderString, true, null).newInstance();
+			} catch (Throwable x) {
 				x.printStackTrace();
 				System.exit(1);
 			}
 		}
-/*[IF !Sidecar19-SE]*/		
 		bootstrapClassLoader = sysTemp;
 		AbstractClassLoader.setBootstrapClassLoader(bootstrapClassLoader);
 		lazyClassLoaderInit = true;
 		applicationClassLoader = bootstrapClassLoader;
-/*[ENDIF]*/
+		/*[ENDIF] Java11 */
 
 		/* [PR 78889] The creation of this classLoader requires lazy initialization. The internal classLoader struct
 		 * is created in the initAnonClassLoader call. The "new InternalAnonymousClassLoader()" call must be 
@@ -257,11 +252,17 @@ public abstract class ClassLoader {
 		
 		/*[IF Sidecar19-SE]*/
 		jdk.internal.misc.VM.initLevel(1);
-		/*[IF Java18.3]*/
+		/* 
+		 * Following code ensures that the field jdk.internal.reflect.langReflectAccess 
+		 * is initialized before any usage references. This is a workaround.
+		 * More details are at https://github.com/eclipse/openj9/issues/3399#issuecomment-459004840.
+		 */
+		Modifier.isPublic(Modifier.PUBLIC);
+		/*[IF Java10]*/
 		try {
 		/*[ENDIF]*/
 			System.bootLayer = jdk.internal.module.ModuleBootstrap.boot();
-		/*[IF Java18.3]*/
+		/*[IF Java10]*/
 		} catch (Exception ex) {
 			ex.printStackTrace();
 			System.exit(1);
@@ -269,12 +270,18 @@ public abstract class ClassLoader {
 		/*[ENDIF]*/
 		jdk.internal.misc.VM.initLevel(2);
 		String javaSecurityManager = System.internalGetProperties().getProperty("java.security.manager"); //$NON-NLS-1$
-		if (null != javaSecurityManager) {
-			if (javaSecurityManager.isEmpty()) {
+		if ((javaSecurityManager != null) 
+		/*[IF Java12]*/
+			/* See the SecurityManager javadoc for details about special tokens. */
+			&& !javaSecurityManager.equals("disallow") //$NON-NLS-1$ /* special token to disallow SecurityManager */
+			&& !javaSecurityManager.equals("allow") //$NON-NLS-1$ /* special token to allow SecurityManager */
+			/*[ENDIF] Java12 */
+		) {
+			if (javaSecurityManager.isEmpty() || "default".equals(javaSecurityManager)) { //$NON-NLS-1$
 				System.setSecurityManager(new SecurityManager());
 			} else {
 				try {
-					System.setSecurityManager((SecurityManager)Class.forName(javaSecurityManager, true, applicationClassLoader).newInstance());
+					System.setSecurityManager((SecurityManager)Class.forName(javaSecurityManager, true, applicationClassLoader).getDeclaredConstructor().newInstance());
 				} catch (Throwable e) {
 					/*[MSG "K0631", "JVM can't set custom SecurityManager due to {0}"]*/
 					throw new Error(com.ibm.oti.util.Msg.getString("K0631", e.toString()), e); //$NON-NLS-1$
@@ -312,10 +319,23 @@ public abstract class ClassLoader {
  *					allow the creation of new ClassLoaders.
  */
 protected ClassLoader() {
-	this(applicationClassLoader);
+	this(checkSecurityPermission(), null, applicationClassLoader);
 }
 
-/*[IF Sidecar19-SE]*/
+/**
+ * This is a static helper method to perform security check earlier such that current ClassLoader object 
+ * can't be resurrected when there is a SecurityException thrown.
+ *
+ * @return Void a unused reference passed to the Constructor
+ */
+private static Void checkSecurityPermission() {
+	SecurityManager security = System.getSecurityManager();
+	if (security != null) {
+		security.checkCreateClassLoader();
+	}
+	return null;
+}
+
 /**
  * Constructs a new instance of this class with the given
  * class loader as its parent.
@@ -326,15 +346,12 @@ protected ClassLoader() {
  * @exception	SecurityException
  *					if a security manager exists and it does not
  *					allow the creation of new ClassLoaders.
- * @exception	NullPointerException
- *					if the parent is null.
  */
 protected ClassLoader(ClassLoader parentLoader) {
-	this(null, parentLoader);
-	// This assumes that DelegatingClassLoader is constructed via ClassLoader(parentLoader)
-	isDelegatingCL = DELEGATING_CL.equals(this.getClass().getName());
+	this(checkSecurityPermission(), null, parentLoader);
 }
 
+/*[IF Sidecar19-SE]*/
 /**
  * Constructs a class loader with the specified name and the given
  * class loader as its parent.
@@ -352,76 +369,58 @@ protected ClassLoader(ClassLoader parentLoader) {
  *@since 9
  */
 protected ClassLoader(String classLoaderName, ClassLoader parentLoader) {
+	this(checkSecurityPermission(), classLoaderName, parentLoader);
+}
+/*[ENDIF]*/
+
+private ClassLoader(Void staticMethodHolder, String classLoaderName, ClassLoader parentLoader) {
+	// This assumes that DelegatingClassLoader is constructed via ClassLoader(parentLoader)
+	isDelegatingCL = DELEGATING_CL.equals(this.getClass().getName());
+
+/*[IF Sidecar19-SE]*/
 	if ((classLoaderName != null) && classLoaderName.isEmpty()) {
 		/*[MSG "K0645", "The given class loader name can't be empty."]*/
 		throw new IllegalArgumentException(com.ibm.oti.util.Msg.getString("K0645")); //$NON-NLS-1$
 	}
-/*[ELSE]*/
-	/**
-	 * Constructs a new instance of this class with the given
-	 * class loader as its parent.
-	 *
-	 * @param		parentLoader ClassLoader
-	 *					the ClassLoader to use as the new class
-	 *					loaders parent.
-	 * @exception	SecurityException
-	 *					if a security manager exists and it does not
-	 *					allow the creation of new ClassLoaders.
-	 * @exception	NullPointerException
-	 *					if the parent is null.
-	 */
-protected ClassLoader(ClassLoader parentLoader) {
-	// This assumes that DelegatingClassLoader is constructed via ClassLoader(parentLoader)
-	isDelegatingCL = DELEGATING_CL.equals(this.getClass().getName());
 /*[ENDIF]*/
-
-	SecurityManager security = System.getSecurityManager();
-	if (security != null)
-		security.checkCreateClassLoader();
 
 	if (parallelCapableCollection.containsKey(this.getClass())) {
 		isParallelCapable = true;
 	}
 	
 	// VM Critical: must set parent before calling initializeInternal()
-	/*[MSG "K0546", "Uninitialized class loader"]*/
-	if (parentLoader != null ) {
-		if (parentLoader.initDone == false) {
-			throw new SecurityException(com.ibm.oti.util.Msg.getString("K0546")); //$NON-NLS-1$
-		} 
-	}
 	parent = parentLoader;
 /*[IF !Sidecar19-SE]*/
-	bootloaderInited = (bootstrapClassLoader != null);
+	specialLoaderInited = (bootstrapClassLoader != null);
 /*[ENDIF]*/
-	if (bootloaderInited) {
+	if (specialLoaderInited) {
 		if (!lazyClassLoaderInit) {
-			com.ibm.oti.vm.VM.initializeClassLoader(this, false, isParallelCapable);
+			VM.initializeClassLoader(this, VM.J9_CLASSLOADER_TYPE_OTHERS, isParallelCapable);
 		}
 /*[IF Sidecar19-SE]*/
-/*[IF Sidecar19-SE-B165]
 		unnamedModule = new Module(this);
-/*[ELSE]*/
-		unnamedModule = SharedSecrets.getJavaLangReflectModuleAccess().defineUnnamedModule(this);
-/*[ENDIF]*/
 /*[ENDIF]*/
 	} 
 /*[IF Sidecar19-SE]*/	
 	else {
-		//bootstrapClassLoader.unnamedModule is set by JVM_SetBootLoaderUnnamedModule
-		unnamedModule = null;
-		bootloaderInited = true;
-		bootstrapClassLoader = this;
-		VM.initializeClassLoader(bootstrapClassLoader, true, false);
+		if (bootstrapClassLoader == null) {
+			// BootstrapClassLoader.unnamedModule is set by JVM_SetBootLoaderUnnamedModule
+			unnamedModule = null;
+			bootstrapClassLoader = this;
+			VM.initializeClassLoader(bootstrapClassLoader, VM.J9_CLASSLOADER_TYPE_BOOT, false);
+		} else {
+			// Assuming the second classloader initialized is platform classloader
+			VM.initializeClassLoader(this, VM.J9_CLASSLOADER_TYPE_PLATFORM, false);
+			specialLoaderInited = true;
+			unnamedModule = new Module(this);
+		}
 	}
-	this.classLoaderName= classLoaderName;
+	this.classLoaderName = classLoaderName;
 /*[ENDIF]*/	
 	
 	if (isAssertOptionFound) {
 		initializeClassLoaderAssertStatus();
 	}
-	
-	initDone = true;
 }
 
 /**
@@ -523,6 +522,18 @@ protected final Class<?> defineClass (
 		ProtectionDomain protectionDomain) 
 		throws java.lang.ClassFormatError 
 {
+	return defineClassInternal(className, classRep, offset, length, protectionDomain, false /* allowNullProtectionDomain */);
+}
+
+final Class<?> defineClassInternal(
+		final String className, 
+		final byte[] classRep, 
+		final int offset, 
+		final int length, 
+		ProtectionDomain protectionDomain,
+		boolean allowNullProtectionDomain)
+		throws java.lang.ClassFormatError 
+{
 	Certificate[] certs = null; 
 	if (protectionDomain != null) {
 		final CodeSource cs = protectionDomain.getCodeSource();
@@ -540,7 +551,7 @@ protected final Class<?> defineClass (
 		throw new ArrayIndexOutOfBoundsException();
 	}
 
-	if (protectionDomain == null)	{
+	if ((protectionDomain == null) && !allowNullProtectionDomain) {
 		protectionDomain = getDefaultProtectionDomain();
 	}
 	
@@ -565,9 +576,7 @@ protected final Class<?> defineClass (
 		}
 	}
 	/*[IF Sidecar19-SE]*/
-	synchronized(packages) {
-		packages.computeIfAbsent(answer.getPackageName(), pkgName->new NamedPackage(pkgName, answer.getModule()));
-	}
+	addPackageToList(answer);
 	/*[ENDIF] Sidecar19-SE */
 
 	/*[PR CMVC 89001] Verbose output when loading non-bootstrap classes */
@@ -578,6 +587,38 @@ protected final Class<?> defineClass (
 	}
 	return answer;
 }
+
+/*[IF Sidecar19-SE]*/
+/**
+ * This class is a function that maps a package name to a newly created
+ * {@code NamedPackage} object for use below in updating the {@code packages} map.
+ */
+private static final class NamedPackageProvider implements java.util.function.Function<String, NamedPackage> {
+
+	private final Class<?> newClass;
+
+	NamedPackageProvider(Class<?> newClass) {
+		super();
+		this.newClass = newClass;
+	}
+
+	@Override
+	public NamedPackage apply(String pkgName) {
+		return new NamedPackage(pkgName, newClass.getModule());
+	}
+
+}
+
+/**
+ * Add a class's package name to this classloader's list of packages, if not already present.
+ * @param newClass
+ */
+void addPackageToList(Class<?> newClass) {
+	synchronized (packages) {
+		packages.computeIfAbsent(newClass.getPackageName(), new NamedPackageProvider(newClass));
+	}
+}
+/*[ENDIF] Sidecar19-SE */
 
 /*[PR CMVC 89001] Verbose output when loading non-bootstrap classes */ 
 private native boolean isVerboseImpl();
@@ -927,24 +968,6 @@ public InputStream getResourceAsStream (String resName) {
 	return null;
 }
 
-/*[IF Sidecar19-SE]*/
-/**
- * Returns an input stream to a resource in a module defined to this class loader.
- * 
- * @param moduleName Name of the module
- * @param name Name of the resource
- * 
- * @return InputStream
- *			a stream on the resource or null.
- *
- * @throws IOException
- */
-protected InputStream getResourceAsStream(String moduleName, String name) throws IOException
-{
-	return null;
-}
-/*[ENDIF] Sidecar19-SE */
- 
 static void completeInitialization() {
 	/*[PR JAZZ 57622: Support -Dreflect.cache=boot option] -Dreflect.cache=boot causes deadlock (Details: CMVC 120695). Loading Void class explicitly will prevent possible deadlock during caching reflect classes/methods. */
 	@SuppressWarnings("unused")
@@ -989,6 +1012,15 @@ static ClassLoader getClassLoader(Class<?> clz) {
 /*[ENDIF]*/
 
 /*[IF Sidecar19-SE]*/
+/**
+ * Return the Platform classloader.
+ *
+ * If a security manager exists and it does not
+ * allow access a SecurityException will be thrown.
+ *
+ * @return the platformClassLoader
+ * @throws SecurityException if access to the platform classloader is denied
+ */
 @CallerSensitive
 public static ClassLoader getPlatformClassLoader() {
 	SecurityManager security = System.getSecurityManager();
@@ -1561,8 +1593,10 @@ public final Package[] getDefinedPackages() {
  *
  * @param		name		The name of the package to find
  * @return		The package requested, or null
- * 
+/*[IF Sidecar19-SE]
+ *
  * @deprecated Use getDefinedPackage(String)
+/*[ENDIF]
  */
 /*[IF Sidecar19-SE]*/
 @Deprecated(forRemoval=false, since="9")
@@ -1874,6 +1908,24 @@ static void loadLibraryWithPath(String libName, ClassLoader loader, String libra
 		}
 	}
 	byte[] message = ClassLoader.loadLibraryWithPath(com.ibm.oti.util.Util.getBytes(libName), loader, libraryPath == null ? null : com.ibm.oti.util.Util.getBytes(libraryPath));
+
+	/* As Mac OS X used to be using lib<name>.jnilib Java native library format,
+	 * VM will attempt loading native library using the legacy library extension
+	 * on Mac OS X to support older applications
+	 */
+	if (System.internalGetProperties().getProperty("os.name").equals("Mac OS X")) { //$NON-NLS-1$ //$NON-NLS-2$
+		if ((message != null) && (libraryPath != null)) {
+			String legacyPath = libraryPath.replaceAll("/$", "") + "/lib" + libName + ".jnilib"; //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$ //$NON-NLS-4$
+
+			try {
+				byte[] jnilibLoadMessage = ClassLoader.loadLibraryWithPath(com.ibm.oti.util.Util.getBytes(legacyPath), loader, null);
+				if (jnilibLoadMessage == null) {
+					message = null;
+				}
+			} catch (Exception e) { /* Ignore Exception */ }
+		}
+	}
+
 	if (message != null) {
 		String error;
 		try {
@@ -2106,7 +2158,11 @@ boolean getDefaultAssertionStatus() {
  */
 private void initializeClassLoaderAssertStatus() {
 	/*[PR CMVC 130382] Optimize checking ClassLoader assertion status */
+	/*[IF Sidecar19-SE]*/
+	boolean bootLoader = bootstrapClassLoader == this;
+	/*[ELSE]
 	boolean bootLoader = bootstrapClassLoader == null;
+	/*[ENDIF]*/
 
 	if (!bootLoader && !checkAssertionOptions) {
 		// if the bootLoader didn't find any assertion options, other
@@ -2273,7 +2329,8 @@ ServicesCatalog getServicesCatalog() {
 /**
  * Answers an URL which can be used to access the resource
  * described by resName, using the class loader's resource lookup
- * algorithm. The default behavior is just to return null.
+ * algorithm. By default, return null, unless moduleName is null,
+ * in which case return findResource(resName).
  * This should be implemented by a ClassLoader.
  *
  * @return		URL
@@ -2282,9 +2339,16 @@ ServicesCatalog getServicesCatalog() {
  * 					the module name
  * @param		resName String
  *					the name of the resource to find.
+ *
+ * @throws IOException when an error occurs
  */
-protected URL findResource(String moduleName, String name) throws IOException {
-	return null;
+protected URL findResource(String moduleName, String resName) throws IOException {
+	URL result = null;
+	if (null == moduleName) {
+		/* Handle the default case for subclasses which do not implement this method */
+		result = findResource(resName);
+	}
+	return result;
 }
 
 Package definePackage(String name, Module module) {
@@ -2353,4 +2417,3 @@ public final boolean isRegisteredAsParallelCapable() {
 
 /*[ENDIF] Sidecar19-SE*/
 }
-
