@@ -1,6 +1,6 @@
 /*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 2000, 2016 IBM Corp. and others
+ * Copyright (c) 2000, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -18,11 +18,10 @@
  * [1] https://www.gnu.org/software/classpath/license.html
  * [2] http://openjdk.java.net/legal/assembly-exception.html
  *
- * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
+ * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
 package com.ibm.jvm.trace.format.api;
 
-import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
 import java.nio.BufferUnderflowException;
 import java.util.ArrayList;
@@ -571,7 +570,7 @@ final public class Message {
 		}
 
 		Object getValue(ByteStream msg) {
-			return new Long(ptrSize == 4 ? msg.getUnsignedInt() : msg.getLong());
+			return Long.valueOf(ptrSize == 4 ? msg.getUnsignedInt() : msg.getLong());
 		}
 
 		void format(ByteStream msg, StringBuilder out) {
